# CompilerProject

./: .cproject  CMakeLists.txt
CompilerProject-main/: CMakeLists.txt  rules.txt
CompilerProject-main/src/: prototype.cpp
CompilerProject-main/src/Phase 2/: Element.cpp  Element.h  Nonterminal.cpp  Nonterminal.h  Terminal.cpp  Terminal.h
CompilerProject-main/src/Phase 2/ModifyGrammar/: LeftFactoring.cpp  LeftFactoring.h  LeftRecursion.cpp  LeftRecursion.h
src/: LeftFactoring.cpp  LeftFactoring.h  LeftRecursion.cpp  LeftRecursion.h  ModifyGrammar.h  Nonterminal.h  Production.cpp  Production.h  Symbol.cpp  Symbol.h  Terminal.h  main.cpp  parser.cpp  prototype.cpp
